RESOLVED FIXED40498
Safari 5 does not clear background with transformed html element
https://bugs.webkit.org/show_bug.cgi?id=40498
Summary Safari 5 does not clear background with transformed html element
Andreas
Reported 2010-06-11 14:12:28 PDT
* open page with the sample code in a tab * open another page in a second tab * click on the first tab with containing the sample Result: Safari 5 do not clear the page and the Content from the second tab is in the background <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> <head> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> <title>Clearing-Bug</title> <style type="text/css"> html { -webkit-perspective: 1200; } body { -webkit-transform-style: preserve-3d; } </style> </head> <body> <img src="http://webkit.org/images/icon-gold.png" /> </body> </html>
Attachments
Patch (13.15 KB, patch)
2010-06-15 13:19 PDT, Simon Fraser (smfr)
mitz: review+
Mark Rowe (bdash)
Comment 1 2010-06-11 17:15:49 PDT
Simon Fraser (smfr)
Comment 2 2010-06-15 13:19:15 PDT
Simon Fraser (smfr)
Comment 3 2010-06-15 15:01:58 PDT
WebKit Review Bot
Comment 4 2010-06-15 15:18:12 PDT
http://trac.webkit.org/changeset/61214 might have broken GTK Linux 64-bit Debug The following changes are on the blame list: http://trac.webkit.org/changeset/61214 http://trac.webkit.org/changeset/61215
Note You need to log in before you can comment on or make changes to this bug.