2010-06-15  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Safari 5 does not clear background with transformed html element
        https://bugs.webkit.org/show_bug.cgi?id=40498

        When the document element is composited, ensure that the FrameView
        paints the background, because the composited layer may be transparent,
        or might get moved via animation.

        Test: compositing/repaint/composited-document-element.html

        * rendering/RenderView.cpp:
        (WebCore::isComposited):
        (WebCore::rendererObscuresBackground):

Canonical link: https://commits.webkit.org/52224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61214 268f45cc-cd09-0410-ab3c-d52691b4dbfc